objects/Global_Account__c.object
<CustomObject>
    <customHelpPage>Help_Account</customHelpPage>
    <description>Custom object used to manage and analyze &quot;groups&quot; of standard accounts for the purposes of establishing strategics and tactics for increased revenue growth and margin expansion.

Primarily used by Global Account Managers</description>
    <label>Global Account</label>
    <nameField>
        <label>Global Account Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>GA_FY_To_Plan__c</fullName>
        <description>Performance to annual plan</description>
        <formula>1-( GA_FY_Orders_Target__c-GA_FY_Orders_Achieved__c )/ GA_FY_Orders_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Performance to annual plan</inlineHelpText>
        <label>FY % To Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GA_Objectives__c</fullName>
        <description>List of plan objectives for this global account program</description>
        <inlineHelpText>List of plan objectives for this global account program</inlineHelpText>
        <label>Annual Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GA_SWOT_Threats__c</fullName>
        <description>Threats to achieving the annual target</description>
        <inlineHelpText>Threats to achieving the annual target</inlineHelpText>
        <label>Threats</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GA_Manager_Phone__c</fullName>
        <description>Phone number of the GA program manager at PerkinElmer</description>
        <formula>GA_Global_Account_Manager__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Phone number of the GA program manager at PerkinElmer</inlineHelpText>
        <label>GA Manager Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_SWOT_Strengths__c</fullName>
        <description>Strengths in achieving the annual target</description>
        <inlineHelpText>Strengths in achieving the annual target</inlineHelpText>
        <label>Strengths</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GA_SWOT_Weaknesses__c</fullName>
        <description>What are our current weaknesses at these program accounts?</description>
        <inlineHelpText>What are our current weaknesses at these program accounts?</inlineHelpText>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GA_Current_Pipeline__c</fullName>
        <description>Total amount of open opportunities from all program accounts</description>
        <inlineHelpText>Total amount of open opportunities from all program accounts</inlineHelpText>
        <label>Current Pipeline</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GA_FY_Orders_Target__c</fullName>
        <description>The order/booking target for this Global Account program</description>
        <inlineHelpText>The order/booking target for this Global Account program</inlineHelpText>
        <label>FY Orders Target</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GA_FY_Orders_Achieved__c</fullName>
        <description>The amount of Closed Won opportunities in the current fiscal year</description>
        <inlineHelpText>The amount of Closed Won opportunities in the current fiscal year</inlineHelpText>
        <label>FY Orders Achieved</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GA_SWOT_Opportunities__c</fullName>
        <description>Opportunities in achieving the annual target</description>
        <inlineHelpText>Opportunities in achieving the annual target</inlineHelpText>
        <label>Opportunities</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GA_Stakeholder_Mgmt_Plan__c</fullName>
        <description>The approach the Global Account Plan Owner will take to achieving the annual target.</description>
        <inlineHelpText>The approach the Global Account Plan Owner will take to achieving the annual target.</inlineHelpText>
        <label>Stakeholder Management Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GA_Global_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of the name of Global Account Manager from the user object</description>
        <inlineHelpText>Name of Global Account Manager</inlineHelpText>
        <label>Global Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Global_Account</fullName>
        <active>true</active>
        <description>Recordtype for records which belong to the Global Account Program</description>
        <label>Global Account</label>
    </recordTypes>
</CustomObject>